src/objects/vlocity_ins__ProducerPayment__c.object
<CustomObject>
    <description>Represents compensation payments made by the insurance company to its agents/brokers/producers such as fees, commissions or adjustments. Master-detail child object of an Agent/Broker/Producer Contact.</description>
    <fields>
        <fullName>vlocity_ins__PaymentAmount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PaymentDate__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PaymentSource__c</fullName>
        <label>Payment Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Brokerage</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProducerId__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>ProducerPayments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid Sent</fullName>
                </value>
                <value>
                    <fullName>Paid Not Sent</fullName>
                </value>
                <value>
                    <fullName>Not Paid</fullName>
                </value>
                <value>
                    <fullName>Closed Unpaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Commission</fullName>
                </value>
                <value>
                    <fullName>Fee</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Producer Payment</label>
    <nameField>
        <label>Check #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Producer Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>